--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,34 @@ tr {
         margin-left: 2px;
         margin-right: 2px;
     }
+    .conteiner {
+        display: block;
+        margin-left: 9px;
+    }
+    .cruces {
+        padding: 5px;
+    }
+    .cruces-caja {
+        padding: 5px;
+    }
+    .img-cruce {
+        width: 40px;
+        height: 40px;
+    }
+    .cruces-2 {
+        padding: 5px;
+    }
+    .cruces-caja-2 {
+        padding: 5px;
+    }
+    .cruces-3 {
+        padding: 5px;
+    }
+    .gol-titulo {
+        margin-left: 9px;
+    }
+    .goleador {
+        margin-left: 5px;
+    }
+
 }
-
-
